# add_library(libtemplatemethod behavioral_templatemethod_1.cpp behavioral_templatemethod_2.cpp behavioral_templatemethod_3.cpp)
add_library(libtemplatemethod behavioral_templatemethod_1.cpp behavioral_templatemethod_2.cpp behavioral_templatemethod_3.cpp behavioral_templatemethod_4.cpp behavioral_templatemethod_5.cpp behavioral_templatemethod_6.cpp behavioral_templatemethod_7.cpp )