# add_library(libvisitor behavioral_visitor_acyclic.cpp behavioral_visitor_double.cpp behavioral_visitor_intrusive.cpp behavioral_visitor_multimethods.cpp behavioral_visitor_reflective.cpp behavioral_visitor_std_visit.cpp)
add_library(libvisitor behavioral_visitor_1.cpp behavioral_visitor_2.cpp behavioral_visitor_3.cpp behavioral_visitor_4.cpp behavioral_visitor_5.cpp behavioral_visitor_6.cpp behavioral_visitor_7.cpp behavioral_visitor_8.cpp behavioral_visitor_9.cpp behavioral_visitor_10.cpp )